internal/octogo/testdata/unused_var.ogo
// A local variable that is never used is reported "declared and not used". A
// variable is used when its name appears in a read position: read into another
// value, passed to a call, tested in a condition, or used as the base or index of
// a "base.field"/"base[i]"/"*base" target. A bare assignment "x = e" writes x
// without using it, so a variable that is only ever assigned is reported.
// Parameters, named results and the blank identifier are exempt.

func unused() {
	// ERROR "declared and not used: a"
	var a int

	// ERROR "declared and not used: b"
	b := 5
}

// A variable that is only ever assigned, never read, is reported.
func writeOnly() {
	// ERROR "declared and not used: a"
	a := 1
	a = 2

	// ERROR "declared and not used: b"
	var b int
	b = 3
}

// Every form of reference counts as a use.
func used() {
	var a int
	_ = a

	b := 5
	c := b + 1
	_ = c

	var d int
	if d == 0 {
	}

	var e int
	use(e)
}

// Using a variable as the base or index of a compound target reads it.
func targetBaseReads() {
	var p pt
	p.f = 1

	var a [3]int
	var i int
	i = 0
	a[i] = 2

	var v int
	var q *int = &v
	*q = 3
}

type pt struct{ f int }

func use(x int) {}

// A parameter and a named result are not local declarations and are exempt.
func params(p int) (r int) {
	return p
}

// The blank identifier is always exempt.
func blank() {
	_ = 1
}
